--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- displays site properly based on user's device -->
 
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./images/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+		<link rel="stylesheet" href="style.css" />
 
 		<title>Frontend Mentor | Profile card component</title>
 	</head>
 	<body>
+		<main>
+			<section class="card">
+				<div class="background"></div>
+				<section class="info">
+					<img src="images/image-victor.jpg" alt="Profile picture" />
+					<header>Victor Crest <span class="age">26</span></header>
+					<p class="city">London</p>
+				</section>
+				<hr />
+				<section class="stats">
+					<p class="numbers">80K</p>
+					<p class="numbers">803K</p>
+					<p class="numbers">1.4K</p>
+					<p class="description">Followers</p>
+					<p class="description">Likes</p>
+					<p class="description">Photos</p>
+				</section>
+			</section>
+		</main>
+
 		<footer>
 			<div class="attribution">
 				Challenge by
-				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-					>Frontend Mentor</a
-				>. Coded by <a href="#">Your Name Here</a>.
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+				<a href="https://github.com/xPatryk8">Patryk</a>.
 			</div>
 		</footer>
 	</body>
